web/static/css/style.css
:root {
    --font-size-h1: 20px;
    --font-size-h2: 18px;
    --font-size-h3: 16px;
    --font-size-h4: 14px;
}

.theme-light {
	--color-primary: #fff;
	--color-primary-dark: #808080;
	--color-accent: blue;
	--color-secondary: purple;
	--text-color-primary: #000;
	--text-color-secondary: #aaa;
	--text-color-url: purple;
	--text-color-accent: blue;
	--text-color-secondary: #000;
}

.theme-dark {
	--color-primary: #121212;
	--color-primary-dark: #808080;
	--color-accent: blue;
	--color-secondary: purple;
	--text-color-primary: #aaa;
	--text-color-secondary: #e7e7e7;
	--text-color-url: #aaa;
	--text-color-accent: #e7e7e7;
}

h1 { font-size: var(--font-size-h1); }
h2 { font-size: var(--font-size-h2); }
h3 { font-size: var(--font-size-h3); }
h4 { font-size: var(--font-size-h4); }

img {
	margin: auto;
	width: 100%;
	display: block;
}

body {
	background-color: var(--color-primary);
	color: var(--text-color-primary);
    margin: auto;
	width: 50%;
}

.header {
	top: 0;
	padding-top: 10px;
	padding-bottom: 70px;
}

.header h1 {
	float: left;
	display: inline;
}

.header h2 {
	float: right;
	display: inline;
}

.content h1 {
	padding-top: 40px;
	line-height: 1.8;
}

.content h2 {
	padding-top: 40px;
	line-height: 1.8;
}

.content p {
    font-size: var(--font-size-h4);
	color: var(--text-color-secondary);
	margin: 0 0 1.75rem;
	line-height: 1.6;
}

.footer {
   left: 0;
   bottom: 0;
   margin-top: 150px;
   width: 100%;
   text-align: center;
}

a {
	cursor: pointer;
	color: var(--text-color-accent);
	text-decoration: none;
	border-bottom: 1px solid blue
}

a:visited {
	color: var(--text-color-url);
	border-bottom: 1px solid purple
}

a:hover {
	background-color: blue;
	color: #fff;
}

a:hover:visited {
	background-color: blue;
	color: white;
}

.span.date {
	color: var(--color-primary-dark);
}

.span.header-code {
	color: var(--color-primary-dark);
}

.header a:visited {
	color: var(--text-color-accent);
	border-bottom: none;
}

.header a {
	border-bottom: none;
}

.header a:hover:visited {
	color: white;
	background-color: var(--color-accent);
	border-bottom: none;
}

@media only screen and (max-width: 1000px) {
    body {
        background-color: var(--color-primary);
        color: var(--text-color-primary);
        margin: auto;
        width: 90%;
    }
}

